tests/ui/consts/const-eval-fail-too-big.stderr
error[E0080]: values of the type `[u8; usize::MAX]` are too big for the target architecture
  --> $DIR/const-eval-fail-too-big.rs:4:28
   |
LL |                    let x = [0u8; !0usize];
   |                            ^^^^^^^^^^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
